# WeChatHelper

./: CMakeLists.txt  README  README.md
MMPro/: CMakeLists.txt
MMPro/include/: MM.h
MMPro/micromsg/: CMakeLists.txt  protoc.bat
MMPro/micromsg/proto/: APPItem.proto  AcceptCardItemRequest.proto  AcceptCardItemResponse.proto  AcceptCardListFromAppRequest.proto  AcceptCardListFromAppResponse.proto  AcctSectResp.proto  ActionAttr.proto  AdAppList.proto  AddChatRoomDonateRecordReq.proto  AddChatRoomDonateRecordResp.proto  AddChatRoomMemberRequest.proto  AddChatRoomMemberResponse.proto  AddContactLabelRequest.proto  AddContactLabelResponse.proto  AddFavItem.proto  AddFavItemRequest.proto  AddFavItemResponse.proto  AddGameMsg.proto  AddMsg.proto  AddRemindRequest.proto  AddRemindResponse.proto  AddTalkRoomMemberRequest.proto  AddTalkRoomMemberResponse.proto  AdditionalContactList.proto  Address.proto  AdvertiseObject.proto  AlbumLbsContactInfo.proto  AlbumLbsRequest.proto  AlbumLbsResponse.proto  AndroidGCMRegRequest.proto  AndroidGCMRegResponse.proto  AndroidGCMUnRegRequest.proto  AndroidGCMUnRegResponse.proto  AppCenterRequest.proto  AppCenterResponse.proto  AppCommentRequest.proto  AppCommentResponse.proto  AppMsg.proto  AppPersonalInfo.proto  AppSetting.proto  (+1171 more)
MMPro/micromsg/src/: AddMsg.pb.cc  AddMsg.pb.h  AdditionalContactList.pb.cc  AdditionalContactList.pb.h  AdvertiseObject.pb.cc  AdvertiseObject.pb.h  BaseResponse.pb.cc  BaseResponse.pb.h  BizApiInfo.pb.cc  BizApiInfo.pb.h  BizScopeInfo.pb.cc  BizScopeInfo.pb.h  ChatRoomMemberData.pb.cc  ChatRoomMemberData.pb.h  ChatRoomMemberInfo.pb.cc  ChatRoomMemberInfo.pb.h  CreateChatRoomResponse.pb.cc  CreateChatRoomResponse.pb.h  CustomizedInfo.pb.cc  CustomizedInfo.pb.h  DeepLinkBitSet.pb.cc  HTTPHeader.pb.cc  (+52 more)
lucky/: CMakeLists.txt
lucky/src/: WeChatHelper.cc  WeChatHelper.h
lucky/src/common/: Threadpool.cc  Threadpool.h  WeChatInner.cc  WeChatInner.h  WeChatString.cc  WeChatString.h  Work.cc  Work.h
lucky/src/service/: EventLoop.cc  EventLoop.h  HttpClient.cc  HttpClient.h  HttpServer.cc  HttpServer.h  Service.cc  Service.h
lucky/src/service/controller/: ChatRoomController.cc  ChatRoomController.h  ContactController.cc  ContactController.h  HttpController.h  MMController.cc  MMController.h  MsgController.cc  MsgController.h  SnsController.cc  SnsController.h
lucky/src/utils/: Singleton.h  Utils.cc  Utils.h
lucky/src/wechat/: AutoHook.cpp  AutoHook.h  CallBack.cc  CallBack.h  CallBackManager.cc  CallBackManager.h  NetScene.cc  NetScene.h  NetSceneCallBack.cc  NetSceneCallBack.h  SyncMgr.cc  SyncMgr.h  VTableHook.cc  VTableHook.h  WeChat.cc  WeChat.h  WeChatFunction.h  WeChatOffset.h
protobuf/: CMakeLists.txt
src/: DllMain.cc  WinMain.cc
tools/server/: go.mod  main.go
